# AInovel-Platfrom

./: .gitignore  01-service-overview.md  03-screens.md  04-tech-stack.md  06-competitor-analysis.md  08-mobile-webapp.md  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/agents/: cms-backend.md  cms-database.md  cms-esl.md  cms-frontend.md  cms-websocket.md  code-reviewer.md  code-simplifier.md  security-reviewer.md  tech-lead.md  ux-reviewer.md
.claude/rules/: backend.md  database.md  development-process.md  frontend.md  prompt-engineering.md  thinking-frameworks.md
backend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/src/: app.module.ts  main.ts
docs/: WORKLOG.md
docs/ai/: ai-pipeline.md  model-strategy.md  prompt-engineering.md
docs/architecture/: infrastructure.md  system-overview.md
docs/backend/: api-architecture.md  api-endpoints.md  authentication.md  payment-system.md  service-modules.md
docs/database/: cache-strategy.md  indexes.md  schema.md
docs/frontend/: design-system.md  pwa-design.md  reader-architecture.md  state-management.md  web-architecture.md
docs/planning/: author-system.md  business-model.md  community.md  features.md  roadmap.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
services/ai-service/: .env.example  pyproject.toml  requirements.txt
services/ai-service/app/: config.py  main.py
services/ai-service/app/routers/: generation.py
(+224 files in other folders)
